<resources>
    <string name="app_name">FoodControl</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="icon_new_recipe">Создать рецепт</string>
    <string name="icon_recipe_categories">Категории рецептов</string>
    <string name="icon_all_recipes">Полный список рецептов</string>
    <string name="icon_food_basket">Корзина</string>
    <string name="icon_table_weights">Таблица мер и весов</string>
    <string name="icon_cooking_time">Время готовки</string>
    <string name="icon_exit">Выход</string>
    <string name="hint_description">Введите описание (напр.: 2 л.; 1 кг.)</string>
    <string name="hint_name_recipe">Название рецепта</string>
    <string name="hint_time_recipe">Время приготовления (мин.)</string>
    <string name="hint_instruction_recipe">Инструкция по приготовлению</string>'
    <string name="hint_add_ingredients">Добавить ингредиенты</string>
    <string name="hint_save_recipe">Сохранить рецепт</string>
    <string name="hint_form_recipes">Подобрать рецепты</string>
    <string name="hint_update_recipes">Обновить рецепты</string>
    <string name="time_recipe">Время приготовления (в минутах):</string>
    <string name="hint_ingredients">Ингредиенты</string>
    <string name="hint_in_the_fridge">Убрать в холодильник</string>
    <string name="placeholder">Поиск по названию</string>
    <string name="add_product">Добавить продукты</string>
    <string name="add_to_basket">Добавить в корзину</string>
    <string name="delete_product">Убрать продукты</string>
    <string name="check_product">Выбрать продукты</string>
    <string name="basketActivityName">Корзина</string>
    <string name="mainActivityName">Холодильник</string>
    <string name="productsActivityName">Продукты</string>
    <string name="addRecipeActivityName">Создание рецепта</string>
    <string name="listRecipesActivityName">Рецепты</string>
    <string name="listRecipeCategoriesActivityName">Категории рецептов</string>
    <string name="recipeActivityName">Рецепт</string>
    <string name="add_ingredient">Добавить ингредиент</string>
    <string name="clean_recipe">Очистить рецепт</string>
    <string name="edit_recipe">Редактировать рецепт</string>
    <string name="save_recipe">Сохранить рецепт</string>
    <string name="title_activity_products">ProductsActivity</string>
    <string name="title_activity_add_recipe">AddRecipeActivity</string>
    <string name="title_activity_list_recipes">ListRecipesActivity</string>
    <string name="title_activity_basket">BasketActivity</string>
    <string name="title_activity_weight">WeightActivity</string>
    <string name="title_activity_recipe">RecipeActivity</string>
</resources>