<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.toolbar.MainActivity" >
    <item android:id="@+id/action_add"
        android:icon="@drawable/add"
        android:title="@string/add_product"
        app:showAsAction="ifRoom"
        android:orderInCategory="1"
        android:menuCategory="secondary"/>
    <item android:id="@+id/action_delete"
        android:icon="@drawable/delete"
        android:title="@string/delete_product"
        app:showAsAction="ifRoom"
        android:orderInCategory="2"
        android:menuCategory="secondary"/>
    <item android:id="@+id/action_check"
        android:icon="@drawable/check"
        android:title="@string/check_product"
        app:showAsAction="ifRoom"
        android:orderInCategory="3"
        android:menuCategory="secondary"/>
</menu>
